# Fansic

./: Dockerfile  README.md  botcmds.py  build.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
.trunk/: trunk.yaml
