[tool.poetry]
name = "fansic"
version = "0.1.0"
description = ""
authors = ["CoolJosh0221 <joshluffy99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
aiohttp = "^3.8.3"
async-timeout = "^4.0.2"
python-dotenv = "^0.21.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git"}
better-profanity = "^0.7.0"
yarl = "^1.8.2"
motor = "^3.1.1"
pymongo = {extras = ["srv"], version = "^4.3.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
